--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,6 @@
-.hidden {
-  display: none;
-}
-
 body {
   background-color: cornsilk;
-}
-
-.jumbotron {
   text-align: center;
-  background-color:floralwhite;
 }
 
 #banner-pic {
@@ -16,6 +8,7 @@ body {
   width: 200px;
   height: auto;
   margin: 5px;
+  border: 5px solid gold; 
 }
 
 .card {
@@ -23,12 +16,9 @@ body {
   padding: 10px;
   border: solid 5px;
   border-radius: 10px 10px 10px 10px;
-  opacity: 50%;
-}
-
-#banner-title {
-  font-weight: 900;
-  opacity: 100%;
+  opacity: 80%;
+  background-color: cornsilk;
+  border-color: brown;
 }
 
 #results {
@@ -36,12 +26,8 @@ body {
   font-weight: 1000;
   color:antiquewhite;
   border-radius: 10%;
-  /* -webkit-text-stroke-width: .5px;
-  -webkit-text-stroke-color: black; */
-  background-color:darkred;
-  padding: 10px;
-}
+  }
 
-.button-container {
-  text-align: center;
+form {
+  font-weight: 900;
 }
