--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,15 @@
+.hidden {
+  display: none;
+  text-align: center;
+}
+
+#clippy-pic img {
+  width: 200px;
+  float: center;
+  border-radius: 80%;
+}
+
+
 body {
   background-color: cornsilk;
   text-align: center;
